  (previously uninitialized) memory to HW regs in VBL routine.
  kprintf() is no longer used here since it's too early (stack is not set
  yet because it would be overwritten, also all variables would be cleared).
  New #define ST_MMU and FALCON_MMU introduced. We should IMHO separate
  these routines and not include them in one EmuTOS binary. I doubt anyone
  would want to run ST EmuTOS on Falcon or vice-versa. (joy)

2006-11-18
- bios/memory.S: don't clear non-existing FastRAM (joy, thanks to Milan)

2007-01-18
- bios/screen.c bios/xbios: Implemented XBIOS functions EsetShift() and
  EgetShift() for setting and getting TT shifter mode. (THH)

2007-02-13
- bios/mmory.S: Check wether machine can really handle 32 address bits before
  setting up the FastRAM. EmuTOS now works in Falcon mode on Hatari again (THH)

2007-02-14
- bios/acsi.c: Fixed ACSI driver to also work with Hatari (THH)

2007-02-16
- bios/screen.c: Added sanity check - EmuTOS only supports up to 16 colors, so
  do not set 256 or 16-bit color mode during boot! (THH)
- bios/nvram.c: NVRAM checksum calculation was wrong - fixed now. (THH)

2007-02-22
- bios/screen.c bios/xbios.c: Experimental implementation of vsetmode (for VGA
  only at the moment). (THH)

2007-04-05
- desk/desk_rsc.c po/*.po: Updated the year in the copyright statement. (THH)

* Release: 0.8.2

2007-07-17
- bios/blkdev.[ch]: PUN_INFO structure added to satisfy FreeMiNT that wants
  to know the max sector size for setting up disk buffer. (joy)
- tosvars.[Sh]: export pun_ptr for setting up the PUN_INFO struct. (joy)

2007-07-24
- util/nlsasm.S: beware, movea.l does NOT set flags! Caused crashes.. (joy)
- util/nlsasm.S: empty string was not translated correctly and that was
  causing scary crashes. Fixed by explicit check for empty string.
  Intentionally not cached in the RAM cache since the empty strings are
  often replaced with something else at runtime. The cache can be rather
  dangerous in this respect... (joy)
